# riffusion-hobby

./: .gitignore  .pylintrc  CITATION  LICENSE  README.md  cog.yaml  dev_requirements.txt  predict.py  prepare_dataset_meta.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_all.txt  requirements_dev.txt  setup.py  train_text_to_image.py
.github/workflows/: black.yml  ci.yml  mypy.yml  pip.yml  playground-update.yml  release.yml  ruff.yml
.streamlit/: config.toml
integrations/: README.md  baseten.py  cog_riffusion.py
riffusion/: audio.py  audio_splitter.py  baseten.py  cli.py  cog_riffusion.py  datatypes.py  playground.py  prompt_weighting.py  riffusion_pipeline.py  server.py  spectrogram_converter.py  spectrogram_image_converter.py  spectrogram_params.py
riffusion/streamlit/: README.md  main.py  playground.py  util.py
riffusion/streamlit/pages/: audio_to_audio.py  audio_to_audio_batch.py  audio_to_audio_interpolate.py  image_to_audio.py  interpolation.py  interpolation_demo.py  prompt_to_prompt.py  prompt_to_prompt_2.py  sample_clips.py  split_audio.py  text_to_audio.py  text_to_audio_batch.py
riffusion/streamlit/tasks/: audio_to_audio.py  home.py  image_to_audio.py  interpolation.py  sample_clips.py  split_audio.py  text_to_audio.py  text_to_audio_batch.py
riffusion/util/: audio_util.py  base64_util.py  fft_util.py  image_util.py  torch_util.py
test/: audio_to_image_test.py  image_to_audio_test.py  image_util_test.py  linter_test.py  print_exif_test.py  sample_clips_test.py  spectrogram_converter_test.py  spectrogram_image_converter_test.py  test_case.py
test/test_data/: README.md
