[tool.poetry]
name = "riffusion"
version = "0.0.5"
description = "Stable diffusion for real-time music generation."
license = "MIT"
authors = [
    "Hayk Martiros <hayk.mart@gmail.com>",
    "Seth Forsgren <contact@sethforsgren.com>"
]
readme = "README.md"
packages = [{ include = "riffusion" }]

[tool.poetry.scripts]
riffusion = "riffusion.cli:main"
riffusion-server = "riffusion.server:main"
riffusion-playground = "riffusion.playground:main"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.7 || >3.9.7,<3.12" # supported python defined by constraints of scipy and streamlit
argh = "^0.27.2"
accelerate = "^0.16.0"
dacite = "^1.8.0"
demucs = "^4.0.0"
diffusers = ">=0.9.0"
flask = "^2.2.2"
flask-cors = "^3.0.10"
numpy = "^1.24.2"
pillow = "^9.4.0"
plotly = "^5.13.0"
pydub = "^0.25.1"
pysoundfile = "^0.9.0.post1"
scipy = "^1.10.0"
soundfile = "^0.11.0"
sox = "^1.4.1"
streamlit = "~1.17.0"
torch = "^1.13.1"
torchaudio = "^0.13.1"
torchvision = "^0.14.1"
transformers = "^4.26.1"
watchdog = "^2.3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipdb = "^0.13.11"
mypy = "^1.0.0"
ruff = "^0.0.245"
types-flask-cors = "^3.0.10.2"
types-pillow = "^9.4.0.10"
types-requests = "^2.28.11.12"
types-tqdm = "^4.64.7.12"
pydub-stubs = "^0.25.1.0"
flake8 = "^6.0.0"
pydocstyle = "^6.3.0"
bandit = "^1.7.4"
pylint = "^2.16.2"

[build-system]
requires = ["setuptools<65.5.0", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
# Which rules to run
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]
ignore = []
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {  }
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = "argh.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cog.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "diffusers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydub.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.fft.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.io.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torchaudio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_missing_imports = true

[tool.pydocstyle]
ignore = "D100,D101,D102,D103,D104,D107,D200,D202,D203,D205,D212,D301,D400,D401,D404,D406,D407,D411,D413,D415,D416,D417"
